# algorithm-test

./: .gitignore  CMakeLists.txt
question1027/: solution1_error.cpp  solution2.cpp  solution3.cpp
question1035/: solution1.cpp  solution1_space_opt.cpp
question1137/: solution1.cpp
question1143/: a.out  solution1.cpp  solution1_space_opt.cpp
question115/: a.out  solution1.cpp
question120/: solution1.cpp  solution2.cpp
question1218/: solution1.cpp  solution2.cpp
question1312/: solution1.cpp  solution1_opt.cpp  solution2.cpp  solution2_time_opt.cpp
question139/: a.out  solution1.cpp  solution2.cpp
question1964/: solution1.cpp  solution1_remake.cpp
question198/: solution1.cpp
question221/: solution1  solution1.cpp  solution2.cpp
question300/: solution1.cpp  solution2.cpp
question354/: solution1.cpp  solution2.cpp  solution2_remake.cpp
question4/: solution1  solution1.cpp  solution2  solution2.cpp
question5/: solution1.cpp  solution2  solution2.cpp  solution3  solution3.cpp
question509/: solution1.cpp
question516/: a.out  solution1  solution1.cpp  solution2.cpp
question62/: solution1  solution1.cpp
question63/: solution1  solution1.cpp
question64/: solution1.cpp
question646/: solution1.cpp  solution2_error.cpp  solution3.cpp
question673/: solution1.cpp  solution2.cpp
question70/: sulution1.cpp
question712/: 0  a.out  solution1.cpp
question72/: a.out  solution1.cpp
question740/: solution1.cpp
question746/: solution1.cpp  solution2.cpp
question931/: solution1.cpp
